--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "triggerCypressApp-WebDriver-config" : "npx cypress open --env configFile=WebDriver-Uni",
+    "triggerAllTestCases" : "npx cypress run",
     "triggerAllTestCases-dashboard" : "npx cypress run --record --key aee66cd8-fffe-44f6-9dbb-1285c16c3eca",
     "triggerCypressApp-Automation-Store-Test-config" : "npx cypress open --env configFile=Automation-Store-Test",
     "triggerCypressApp-GreenKart-config" : "npx cypress open --env configFile=GreenKart",
     "triggerCypressApp-Automation-Practice-config" : "npx cypress open --env configFile=Automation-Practice",
+    "cypress-multi-browser" : "npm run triggerAllTestCases -- --browser chrome --headed & npm run triggerAllTestCases -- --browser firefox --headed ",
     "triggerWebDriver-Uni-config" : "npx cypress run --spec cypress/e2e/WebDriver-Uni --env configFile=WebDriver-Uni"
 
   },
